Name:                   hhp
Version:                0.0.2
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               https://github.com/kazu-yamamoto/hhp
Synopsis:               Happy Haskell Programming
Description:            The hhp command is a backend command to enrich
                        Haskell programming on editors.
                        The hhpc/hhpi commands are based on HHP library
                        which is a wrapper of GHC API and Cabal API.
                        This package includes the hhpc command,
                        the hhpi command,
                        the HHP library, and Emacs front-end.
                        For more information, please see its home page.

Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               elisp
Data-Files:             Makefile hhp.el hhp-func.el hhp-doc.el hhp-comp.el
                        hhp-check.el hhp-process.el hhp-command.el hhp-info.el
                        hhp-ins-mod.el hhp-indent.el hhp-pkg.el
Extra-Source-Files:     ChangeLog
                        test/data/*.cabal
                        test/data/*.hs
                        test/data/cabal.sandbox.config.in
                        test/data/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/Cabal-1.18.1.3-2b161c6bf77657aa17e1681d83cb051b.conf
                        test/data/broken-cabal/*.cabal
                        test/data/broken-sandbox/*.cabal
                        test/data/broken-sandbox/cabal.sandbox.config
                        test/data/check-test-subdir/*.cabal
                        test/data/check-test-subdir/src/Check/Test/*.hs
                        test/data/check-test-subdir/test/*.hs
                        test/data/check-test-subdir/test/Bar/*.hs
                        test/data/check-packageid/cabal.sandbox.config.in
                        test/data/check-packageid/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-2.8.0.0-32d4f24abdbb6bf41272b183b2e23e9c.conf
                        test/data/hhp-check/*.cabal
                        test/data/hhp-check/*.hs
                        test/data/hhp-check/Data/*.hs
                        test/data/subdir1/subdir2/dummy

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  HS-Source-Dirs:       lib
  Exposed-Modules:      Hhp
                        Hhp.Ghc
                        Hhp.Internal
  Other-Modules:        Hhp.Boot
                        Hhp.Browse
                        Hhp.CabalApi
                        Hhp.Check
                        Hhp.Cradle
                        Hhp.Debug
                        Hhp.Doc
                        Hhp.Find
                        Hhp.Flag
                        Hhp.GHCApi
                        Hhp.Gap
                        Hhp.GhcPkg
                        Hhp.Logger
                        Hhp.Info
                        Hhp.Lang
                        Hhp.Lint
                        Hhp.List
                        Hhp.PkgDoc
                        Hhp.Syb
                        Hhp.Types
                        Hhp.Things
  Build-Depends:        base >= 4.9 && < 5
                      , Cabal >= 1.24
                      , containers
                      , deepseq
                      , directory
                      , filepath
                      , ghc
                      , hlint >= 1.8.61
                      , process
                      , syb
                      , ghc-boot

Executable hhpc
  Default-Language:     Haskell2010
  Main-Is:              hhpc.hs
  Other-Modules:        Paths_hhp
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.9 && < 5
                      , directory
                      , filepath
                      , ghc
                      , hhp

Executable hhpi
  Default-Language:     Haskell2010
  Main-Is:              hhpi.hs
  Other-Modules:        Paths_hhp
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.9 && < 5
                      , containers
                      , directory
                      , filepath
                      , ghc
                      , hhp

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3
-- for MIN_VERSION_hlint
                      , hlint

Test-Suite spec
  Default-Language:     Haskell2010
  Main-Is:              Main.hs
  Hs-Source-Dirs:       test, lib
  GHC-Options:          -Wall
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Dir
                        Spec
                        BrowseSpec
                        CabalApiSpec
                        CheckSpec
                        FlagSpec
                        InfoSpec
                        LangSpec
                        LintSpec
                        ListSpec
                        GhcPkgSpec
  Other-Modules:        Hhp
                        Hhp.Boot
                        Hhp.Browse
                        Hhp.CabalApi
                        Hhp.Check
                        Hhp.Cradle
                        Hhp.Debug
                        Hhp.Doc
                        Hhp.Find
                        Hhp.Flag
                        Hhp.GHCApi
                        Hhp.Gap
                        Hhp.GhcPkg
                        Hhp.Info
                        Hhp.Lang
                        Hhp.Lint
                        Hhp.List
                        Hhp.Logger
                        Hhp.PkgDoc
                        Hhp.Syb
                        Hhp.Types
                        Hhp.Things
  Build-Depends:        base >= 4.9 && < 5
                      , Cabal >= 1.24
                      , containers
                      , deepseq
                      , directory
                      , filepath
                      , ghc
                      , hspec >= 1.7.1
                      , process
                      , syb
                      , hlint >= 1.7.1
                      , ghc-boot

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/hhp.git
