cabal-version:      >=1.10
name:               hhp
version:            1.0.2
license:            BSD3
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
homepage:           https://github.com/kazu-yamamoto/hhp
synopsis:           Happy Haskell Programming
description:
    The hhp command is a backend command to enrich
    Haskell programming on editors.
    The hhpc/hhpi commands are based on HHP library
    which is a wrapper of GHC API and Cabal API.
    This package includes the hhpc command,
    the hhpi command,
    the HHP library, and Emacs front-end.
    For more information, please see its home page.
    Version 0.x.x supports GHC 8.x only whereas version
    1.x.x suports GHC 9.x only.

category:           Development
build-type:         Simple
data-files:
    Makefile
    hhp.el
    hhp-func.el
    hhp-doc.el
    hhp-comp.el
    hhp-check.el
    hhp-process.el
    hhp-command.el
    hhp-info.el
    hhp-ins-mod.el
    hhp-indent.el
    hhp-pkg.el

data-dir:           elisp
extra-source-files:
    ChangeLog.md
    test/data/*.cabal
    test/data/*.hs
    test/data/cabal.sandbox.config.in
    test/data/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/Cabal-1.18.1.3-2b161c6bf77657aa17e1681d83cb051b.conf
    test/data/broken-cabal/*.cabal
    test/data/broken-sandbox/*.cabal
    test/data/broken-sandbox/cabal.sandbox.config
    test/data/check-test-subdir/*.cabal
    test/data/check-test-subdir/src/Check/Test/*.hs
    test/data/check-test-subdir/test/*.hs
    test/data/check-test-subdir/test/Bar/*.hs
    test/data/check-packageid/cabal.sandbox.config.in
    test/data/check-packageid/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-2.8.0.0-32d4f24abdbb6bf41272b183b2e23e9c.conf
    test/data/hhp-check/*.cabal
    test/data/hhp-check/*.hs
    test/data/hhp-check/Data/*.hs
    test/data/subdir1/subdir2/dummy

source-repository head
    type:     git
    location: git://github.com/kazu-yamamoto/hhp.git

library
    exposed-modules:
        Hhp
        Hhp.Ghc
        Hhp.Internal

    hs-source-dirs:   lib
    other-modules:
        Hhp.Boot
        Hhp.Browse
        Hhp.CabalApi
        Hhp.Check
        Hhp.Cradle
        Hhp.Debug
        Hhp.Doc
        Hhp.Find
        Hhp.Flag
        Hhp.Gap
        Hhp.GHCApi
        Hhp.GhcPkg
        Hhp.Logger
        Hhp.Info
        Hhp.Lang
        Hhp.Lint
        Hhp.List
        Hhp.PkgDoc
        Hhp.Syb
        Hhp.Types
        Hhp.Things

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        Cabal >=1.24,
        containers,
        deepseq,
        directory,
        exceptions,
        filepath,
        ghc,
        hlint >=1.8.61,
        process,
        syb,
        ghc-boot

executable hhpc
    main-is:          hhpc.hs
    hs-source-dirs:   src
    other-modules:    Paths_hhp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        directory,
        filepath,
        hhp

executable hhpi
    main-is:          hhpi.hs
    hs-source-dirs:   src
    other-modules:    Paths_hhp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        containers,
        directory,
        filepath,
        hhp

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     test lib
    other-modules:
        Dir
        BrowseSpec
        CabalApiSpec
        CheckSpec
        FlagSpec
        InfoSpec
        LangSpec
        LintSpec
        ListSpec
        GhcPkgSpec
        Hhp
        Hhp.Boot
        Hhp.Browse
        Hhp.CabalApi
        Hhp.Check
        Hhp.Cradle
        Hhp.Debug
        Hhp.Doc
        Hhp.Find
        Hhp.Flag
        Hhp.Gap
        Hhp.GHCApi
        Hhp.GhcPkg
        Hhp.Info
        Hhp.Lang
        Hhp.Lint
        Hhp.List
        Hhp.Logger
        Hhp.PkgDoc
        Hhp.Syb
        Hhp.Types
        Hhp.Things

    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.9 && <5,
        Cabal >=1.24,
        containers,
        deepseq,
        directory,
        exceptions,
        extra,
        filepath,
        ghc,
        hspec >=1.7.1,
        process,
        syb,
        hlint >=1.7.1,
        ghc-boot
