Name:                   hhp
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               https://github.com/kazu-yamamoto/hhp
Synopsis:               Happy Haskell Programming
Description:            The hhp command is a backend command to enrich
                        Haskell programming on editors.
                        The hhpc/hhpi commands are based on HHP library
                        which is a wrapper of GHC API and Cabal API.
                        This package includes the hhpc command,
                        the hhpi command,
                        the HHP library, and Emacs front-end.
                        For more information, please see its home page.
Category:               Development
Cabal-Version:          >= 1.6
Build-Type:             Simple
Data-Dir:               elisp
Data-Files:             Makefile hhp.el hhp-func.el hhp-doc.el hhp-comp.el
                        hhp-check.el hhp-process.el hhp-command.el hhp-info.el
                        hhp-ins-mod.el hhp-indent.el hhp-pkg.el

Executable hhpc
  Main-Is:              hhpc.hs
  Other-Modules:        Browse
                        CabalApi
                        Cabal
                        CabalDev
                        Check
                        ErrMsg
                        Flag
                        GHCApi
                        GHCChoice
                        Gap
                        Info
                        Lang
                        Lint
                        List
                        Types
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10
                      , template-haskell

Test-Suite spec
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Expectation
                        BrowseSpec
                        CabalApiSpec
                        FlagSpec
                        LangSpec
                        LintSpec
                        ListSpec
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/hhp.git
